...
            }}
          />
          {/* <Tab.Screen
            name="Checklist"
            component={Checklist}
            options={{
              tabBarTestID: 'Tab.Checklist',
              tabBarLabel: 'Checklist',
              tabBarIcon: ({color}) => (
                <Icon
                  style={styles.icon}
                  fill={color}
                  name="calendar-outline"
...
            }}
          />
          <Tab.Screen
            name="EntrySingle"
            component={EntrySingle}
            options={{
              tabBarTestID: 'Tab.New',
              tabBarLabel: 'New',
              // tabBarButton: () => <NewEntryButton />,
              tabBarButton: () => null,
              unmountOnBlur: true,
            }}
          />
...
