appId: com.charlesinwald.mani
onFlowComplete:
  - runFlow: '../common/teardown.yaml'
---
- launchApp
- waitForAnimationToEnd
- tapOn:
    id: 'Tab.New'
- extendedWaitUntil:
    visible: 'Tap to Edit'
- tapOn:
    text: 'Tap to Edit'
- inputText: "This is today's entry"
- hideKeyboard
- extendedWaitUntil:
    visible: 'Save'
- tapOn: 'Save'
- extendedWaitUntil:
    visible: "This is today's entry"
- tapOn: "This is today's entry"
- extendedWaitUntil:
    visible: "Discard"
- tapOn: "Discard"
- tapOn: "OK"
